# DarkAges

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AI_COORDINATION_PROTOCOL.md  AUTONOMOUS_ITERATION_FRAMEWORK.md  AUTONOMOUS_LOG.md  BUILD_ASSESSMENT_FINAL.md  BUILD_ERRORS_AND_FIXES.md  BUILD_ISSUES.md  BUILD_REPORT.md  BUILD_STATUS_FINAL.md  BUILD_VERIFICATION_REPORT.md  CMakeLists.txt  CMakeLists_enhanced.txt  CMakeLists_fixes_needed.md  COMPILER_INTEGRATION_COMPLETE.md  COMPILER_SETUP.md  CONTRIBUTING.md  CURRENT_STATUS.md  DOCUMENTATION_SYNC_REPORT.md  DarkAges_Comprehensive_Review.md  Dockerfile.build  E2E_TEST_REPORT.md  E2E_TEST_SUMMARY.txt  INFRA_SETUP_REPORT.md  ImplementationRoadmapGuide.md  MASTER_REMEDIATION_PLAN.md  MASTER_TASK_TRACKER.md  MCP_INTEGRATION_COMPLETE.md  PARALLEL_AGENT_COORDINATION.md  PERFORMANCE_BENCHMARK_REPORT.md  PHASE0_SUMMARY.md  PHASE8_COMPLETION_REPORT.md  PHASE8_EXECUTION_PLAN.md  PHASE8_FINAL_SIGNOFF.md  PHASE8_KICKOFF.md  PHASE8_READINESS_ASSESSMENT.md  PHASES_6_7_8_ROADMAP.md  (+32 more)
.github/workflows/: build-and-test.yml  integration-test.yml  redis-tests.yml  release.yml  testing.yml
Research/: CMakeLists_Refactored_Example.md  CMake_FetchContent_Best_Practices_Research.md  CMake_FetchContent_CheatSheet.md  CMake_Integration_Action_Plan.md  GNS_Code_Examples.hpp  GNS_Implementation_Checklist.md  GameNetworkingSockets_Integration_Guide.md  REDIS_SCYLLA_CPP_INTEGRATION_RESEARCH.md
Research/DarkAges_ZeroBudget_Remediation/: darkages_remediation.html  darkages_simple.html  darkages_updated.html
docs/: API_CONTRACTS.md  DATABASE_SCHEMA.md  DOCUMENT_INDEX.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PHASE_6_12_ROADMAP.md  SCYLLA_IMPLEMENTATION.md  TESTING_AND_VALIDATION_PLAN.md
docs/archive/: README.md  (+2 more)
infra/: PRODUCTION_DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.multi-zone.yml  docker-compose.phase6.yml  docker-compose.prod.yml  docker-compose.redis.yml  docker-compose.test.yml  docker-compose.yml  dockerfile.server
scripts/: check_performance_regression.py  test-with-redis.ps1  test-with-redis.sh
src/server/: CMakeLists.txt
src/server/include/: Constants.hpp
src/server/include/combat/: AbilitySystem.hpp  CombatSystem.hpp  LagCompensatedCombat.hpp  PositionHistory.hpp
src/server/include/db/: ConnectionPool.hpp  PlayerSessionManager.hpp  PubSubManager.hpp  RedisInternal.hpp  RedisManager.hpp  ScyllaManager.hpp
src/server/include/ecs/: Components.hpp  CoreTypes.hpp
src/server/include/memory/: FixedVector.hpp  LeakDetector.hpp  MemoryPool.hpp  MemoryPool.inl  PooledAllocator.hpp
src/server/include/monitoring/: MetricsExporter.hpp
src/server/include/netcode/: GNSNetworkManager.hpp  NetworkManager.hpp  ProtobufProtocol.hpp  Protocol.hpp
src/server/include/physics/: MovementSystem.hpp  SpatialHash.hpp
src/server/include/profiling/: PerfettoProfiler.hpp  PerformanceMonitor.hpp
src/server/include/security/: AntiCheat.hpp  AntiCheatConfig.hpp  AntiCheatTypes.hpp  CircuitBreaker.hpp  DDoSProtection.hpp  InputValidator.hpp  MovementValidator.hpp  PacketIntegrity.hpp  PacketValidator.hpp  RateLimiter.hpp  StatisticalDetector.hpp  TrafficAnalyzer.hpp  ViolationTracker.hpp
src/server/include/zones/: AreaOfInterest.hpp  AuraProjection.hpp  AuraZoneHandler.hpp  CombatEventHandler.hpp  CrossZoneMessenger.hpp  EntityMigration.hpp  PlayerManager.hpp  ReplicationOptimizer.hpp  ZoneDefinition.hpp  ZoneHandoff.hpp  ZoneOrchestrator.hpp  ZoneServer.hpp
src/server/src/: main.cpp
src/server/src/combat/: AbilitySystem.cpp  CombatSystem.cpp  LagCompensatedCombat.cpp  PositionHistory.cpp
src/server/src/db/: ConnectionPool.cpp  PlayerSessionManager.cpp  PubSubManager.cpp  RedisManager.cpp  RedisManager_stub.cpp  ScyllaManager.cpp  ScyllaManager_stub.cpp  ZoneMessage.cpp
src/server/src/ecs/: CoreTypes.cpp
src/server/src/memory/: LeakDetector.cpp  MemoryPool.cpp
src/server/src/monitoring/: MetricsExporter.cpp
src/server/src/netcode/: GNSNetworkManager.cpp  NetworkManager.cpp  NetworkManager_stub.cpp  ProtobufProtocol.cpp  Protocol.cpp
src/server/src/physics/: MovementSystem.cpp  SpatialHash.cpp
src/server/src/profiling/: PerfettoProfiler.cpp  PerfettoProfiler_stub.cpp  PerformanceMonitor.cpp
src/server/src/security/: AntiCheat.cpp  CircuitBreaker.cpp  ConnectionThrottler.cpp  DDoSProtection.cpp  InputValidator.cpp  MovementValidator.cpp  PacketIntegrity.cpp  PacketValidator.cpp  RateLimiter.cpp  StatisticalDetector.cpp  TrafficAnalyzer.cpp  ViolationTracker.cpp
src/server/src/zones/: AreaOfInterest.cpp  AuraProjection.cpp  AuraZoneHandler.cpp  CombatEventHandler.cpp  CrossZoneMessenger.cpp  EntityMigration.cpp  PerformanceHandler.cpp  PlayerManager.cpp  ReplicationOptimizer.cpp  ZoneHandoff.cpp  ZoneOrchestrator.cpp  ZoneServer.cpp
src/server/tests/: BenchmarkRedis.cpp  CMakeLists.txt  TestAbilitySystem.cpp  TestAntiCheat.cpp  TestAreaOfInterest.cpp  TestAuraProjection.cpp  TestAuraZoneHandler.cpp  TestCircuitBreaker.cpp  TestCombatEventHandler.cpp  TestCombatEventLogger.cpp  TestCombatSystem.cpp  TestConnectionPool.cpp  TestConnectionThrottler.cpp  TestDDoSProtection.cpp  TestDeltaCompression.cpp  TestEntityMigration.cpp  TestGNSIntegration.cpp  TestInputHandler.cpp  TestInputValidator.cpp  TestLagCompensatedCombat.cpp  TestLagCompensator.cpp  TestMain.cpp  TestMemoryPool.cpp  TestMetricsExporter.cpp  TestMovementSystem.cpp  TestMovementValidator.cpp  TestNetworkProtocol.cpp  TestPacketIntegrity.cpp  TestPacketValidator.cpp  TestPerfettoProfiler.cpp  TestPerformanceHandler.cpp  TestPerformanceMonitor.cpp  TestPlayerSessionManager.cpp  TestPositionHistory.cpp  TestProfiling.cpp  TestProtobufProtocol.cpp  TestPubSubManager.cpp  TestRateLimiter.cpp  TestRedisIntegration.cpp  TestReplicationOptimizer.cpp  (+10 more)
src/shared/proto/: CMakeLists.txt  DarkAgesProtocol.proto  game_protocol.fbs  game_protocol_generated.h  network_protocol.proto
test-reports/: 99-percent-coverage-2024-02-02.md
tools/: setup_phase6_deps.ps1  validate_project_state.py
(+177 files in other folders)
